# algorithm_learn

./:  Access to every village  .gitignore  01Package  CMakeLists.txt  Chs  Deletion problem  Fence Repair  Gold Balanced Lineup  Makefile  README.md  a.out  dig  dig.cpp  game of kings  group  horse traversal  mine clearance  missile_interception  output.txt  paving roads  pingpong  relative  repair_rode
.cph/: .A_Preparing_for_the_OlympiadA_准备奥林匹克竞赛.cpp_f8506e64608f74cf10d3dcfa048c2b35.prob
DFS_BFS/: README.md  horse traversal.cpp  strange elevator.cpp
DP/: 01Package.cpp  01package  01package[1].cpp  LCS  LCS.cpp  MFS  MFS.cpp  MMFS  MMFS.cpp  MatrixMultiplication  MatrixMultiplication.cpp  PolygonGame  PolygonGame.cpp  README.md  copybook  copybook.cpp  missile_interception.cpp
Discrete/: Gold Balanced Lineup.cpp  README.md
Recursion/: Carpet filling problem.cpp  Climb stairs.cpp  Movement of black and white chess pieces.cpp  Partition of a set.cpp  Perm.cpp  README.md  Secret Cow Code S.cpp  calculation of numbers.cpp  hanoi2color.cpp
Recursion and recursion/: Function.cpp  Little A orders food.cpp  Select numbers.cpp  Stack.cpp  alien code.cpp  bee route.cpp  cover wall.cpp
Set/:  Access to every village.cpp  relative.cpp
dichotomy/: README.md  three points.cpp  timber processing.cpp
enumerate/: Prime Palindromes.cpp  README.md
greedy algorithm/: Deletion problem.cpp  Fence Repair.cpp  game of kings.cpp  group.cpp  paving roads.cpp
oj/:  Adrenaline_Rush.cpp  A_Coin_Transformation_A_硬币变换.cpp  A_MEX_Table.cpp  A_Tender_Carpenter.cpp  B_3614_模板_栈.cpp  (+46 more)
(+52 files in other folders)
